--- a/musicplayer/index.html
+++ b/musicplayer/index.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="关键词">
         <meta name="description" content="描述">
         <meta name="author" content="Pt">
-        <link rel="stylesheet" href="css.css">
+        <link rel="stylesheet" href="css.css" type="text/css">
         <style>
         </style>
     </head>
