--- a/musicplayer/index.html
+++ b/musicplayer/index.html
@@ -135,7 +135,7 @@
                    <div class="play_ui_btn">
                        <div class="pre_btn change" title="上一首" onclick="preOne()"><img src="icon_svg/上一首.svg" alt="" width="100%" height="100%"></div>
                        <div class="onOff" title="暂停/播放" onclick="playMusic()">
-                           <img id="onOff_img" src="icon_svg/暂停.svg" alt="" width="100%" height="100%">
+                           <img id="onOff_img" src="icon_svg/start.svg" alt="" width="100%" height="100%">
                            <audio id="play1">
                                <source id="mySource" src=""/>
                            </audio>
